--- a/SharpSpark/packages.config
+++ b/SharpSpark/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EventSource4Net" version="0.4.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
@@ -8,4 +9,5 @@
   <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="slf4net" version="0.1.32.1" targetFramework="net45" />
 </packages>
